kube-manifests/lanebort-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lanebort-dev-backend-svc
  name: lanebort-dev-backend-svc
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: lanebort-dev-backend
status:
  loadBalancer: {}
