kube-manifests/lanebort-backend-ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: lanebort-dev-backend-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: micro-insurance-dev-backend.bfsiaim.com
      http:
       paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: lanebort-dev-backend-svc
            port:
              number: 80
